atualizações no header

--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
 <body onresize="mudouTamanho()">
     <img src="imagens/logo-whatsapp.png" alt="logo Whatsapp" id="fale">
     <header>
-        <div>
-            <p>ATENDIMENTO NO WHATSAPP</p>
+        <div id="top">
+            <p><a href="https://wa.me/5562986052988?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank">ATENDIMENTO NO WHATSAPP</a></p>
         </div>
-        <div>
-            <img src="imagens/logo-n7-p.png" alt="Logo N7">
-        </div>
-        <div>
-            <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
-            <menu>
-                <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Sobre a N7</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Fale Conosco</a></li>
-                </ul>
-            </menu>
-        </div>
+        <img src="imagens/logo-n7-p.png" alt="Logo N7" width="100" >
+        <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
+        <menu>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Sobre a N7</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Fale Conosco</a></li>
+            </ul>
+        </menu>
     </header>
     <main>
+        <div>
 
+        </div>
     </main>
     <footer>
 
