--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div id="top">
             <p><a href="https://wa.me/5562986052988?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank">ATENDIMENTO NO WHATSAPP</a></p>
         </div>
-        <img src="imagens/logo-n7-p.png" alt="Logo N7" width="100" >
+        <img src="imagens/logo-n7-p.png" alt="Logo N7" width="150" >
         <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
-        <menu>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Sobre a N7</a></li>
