--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N7 - Marketing</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body onresize="mudouTamanho()">
@@ -28,8 +29,8 @@
         <div>
             <h1>N7 Marketing <br> Assessoria e Consultoria</h1>
             <p>Capacitamos empresas e profissionais a prosperarem no mundo digital.</p>
-            <a href="">AGENDE UMA CONSULTA GRATUÍTA</a>
-            <img src="imagens/img.jpg" alt="Engrenagens" width="400px">
+            <a href=""><i class="fa fa-whatsapp"></i> AGENDE UMA CONSULTA GRATUÍTA</a>
+            <img src="imagens/img.jpg" alt="Engrenagens" width="300px">
         </div>
     </main>
     <footer>
