--- a/index.html
+++ b/index.html
@@ -26,12 +26,23 @@
         </menu>
     </header>
     <main>
-        <div>
-            <h1>N7 Marketing <br> Assessoria e Consultoria</h1>
-            <p>Capacitamos empresas e profissionais a prosperarem no mundo digital.</p>
-            <a href=""><i class="fa fa-whatsapp"></i> AGENDE UMA CONSULTA GRATUÍTA</a>
-            <img src="imagens/img.jpg" alt="Engrenagens" width="300px">
-        </div>
+        <section id="n7">
+            <div>
+                <h1>N7 Marketing <br> Assessoria e Consultoria</h1>
+                <p>Capacitamos empresas e profissionais a prosperarem no mundo digital.</p>
+                <a href=""><i class="fa fa-whatsapp"></i> AGENDE UMA CONSULTA GRATUÍTA</a>
+                <img src="imagens/img.jpg" alt="Engrenagens">
+            </div>
+        </section>
+        <section id="servicos">
+                <h2>
+                    SERVIÇOS
+                </h2>
+                <div class="gro">
+                    <h3>GESTÃO DE REPUTAÇÃO ON-LINE</h3>
+                    <p>Escudo invisível que protege a integridade de uma marca, moldando percepções e forçando o caminho para o sucesso duradouro.</p>
+                </div>
+        </section>
     </main>
     <footer>
         <p>
