--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="imagens/logo-whatsapp.png" alt="logo Whatsapp" id="fale">
     <header>
         <div id="top">
-            <p><a href="https://wa.me/5562986052988?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank">ATENDIMENTO NO WHATSAPP</a></p>
+            <p><a href="https://wa.me/5562982855454?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank">ATENDIMENTO NO WHATSAPP</a></p>
         </div>
         <img src="imagens/logo-n7-p.png" alt="Logo N7" width="150" >
         <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
@@ -30,7 +30,7 @@
             <div>
                 <h1>N7 Marketing <br> Assessoria e Consultoria</h1>
                 <p>Capacitamos empresas e profissionais a prosperarem no mundo digital.</p>
-                <a href=""><i class="fa fa-whatsapp"></i> AGENDE UMA CONSULTA GRATUÍTA</a>
+                <a href="https://wa.me/5562982855454?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank"><i class="fa fa-whatsapp"></i> AGENDE UMA CONSULTA GRATUÍTA</a>
                 <img src="imagens/img.jpg" alt="Engrenagens">
             </div>
         </section>
