criando parte serviços na index

--- a/index.html
+++ b/index.html
@@ -38,9 +38,53 @@
                 <h2>
                     SERVIÇOS
                 </h2>
+                <i id="left" class="material-symbols-outlined">
+                    arrow_back_ios
+                </i>
+                <i id="right" class="material-symbols-outlined">
+                    arrow_forward_ios
+                </i>
                 <div class="gro">
+                    <img src="imagens/capa-img1.png" alt="img1">
                     <h3>GESTÃO DE REPUTAÇÃO ON-LINE</h3>
-                    <p>Escudo invisível que protege a integridade de uma marca, moldando percepções e forçando o caminho para o sucesso duradouro.</p>
+                    <p>
+                        Escudo invisível que protege a integridade de uma marca, moldando percepções e forçando o caminho para o sucesso duradouro.
+                    </p>
+                </div>
+                <div class="dgc">
+                    <img src="imagens/capa-img2.png" alt="img2">
+                    <h3>DESIGN GRÁFICO E CRIATIVO</h3>
+                    <p>
+                        Arte que pinta a narrativa visual do futuro, transformando idéias em imagens que ecoam na mente e no coração.
+                    </p>
+                </div>
+                <div class="eec">
+                    <img src="imagens/capa-img3.png" alt="img3">
+                    <h3>ESTRATÉGIAS DE E-COMMERCE</h3>
+                    <p>
+                        Âncoras que transformam cliques em carrinhos cheioss, navegadores em compradores e sonhos em realidade digital.
+                    </p>
+                </div>
+                <div class="mdi">
+                    <img src="imagens/capa-img4.png" alt="img4">
+                    <h3>MARKETING DE INFLUENCIADORES</h3>
+                    <p>
+                        Arte de transformar vozes autêntiacas em ecoadores poderosos, construindo conexões genuínas e impulsionando marcas para alturas extraordinárias.
+                    </p>
+                </div>
+                <div class="tec">
+                    <img src="imagens/capa-img5.png" alt="img5">
+                    <h3>TREINAMENTO E CAPTAÇÃO</h3>
+                    <p>
+                        Ferramentas que esculpem equipes extraordinárias, aprimorando o conhecimento em competência e talento em sucesso.
+                    </p>
+                </div>
+                <div class="dam">
+                    <img src="imagens/capa-img6.png" alt="img6">
+                    <h3>DESENVOLVIMENTO DE APLICATIVOS MÓVEIS</h3>
+                    <p>
+                        Inovação que cabe na palma da sua mão, tornando ideais em experiências, desafios em soluções e smartphones em portas para o futuro.
+                    </p>
                 </div>
         </section>
     </main>
