--- a/index.html
+++ b/index.html
@@ -38,54 +38,62 @@
                 <h2>
                     SERVIÇOS
                 </h2>
-                <i id="anterior" class="material-symbols-outlined">
-                    arrow_back_ios
-                </i>
-                <i id="proximo" class="material-symbols-outlined">
-                    arrow_forward_ios
-                </i>
-                <article>
-                    <div class="gro">
-                        <img src="imagens/capa-img1.png" alt="img1">
-                        <h3>GESTÃO DE REPUTAÇÃO ON-LINE</h3>
-                        <p>
-                            Escudo invisível que protege a integridade de uma marca, moldando percepções e forçando o caminho para o sucesso duradouro.
-                        </p>
-                    </div>
-                    <div class="dgc">
-                        <img src="imagens/capa-img2.png" alt="img2">
-                        <h3>DESIGN GRÁFICO E CRIATIVO</h3>
-                        <p>
-                            Arte que pinta a narrativa visual do futuro, transformando idéias em imagens que ecoam na mente e no coração.
-                        </p>
-                    </div>
-                    <div class="eec">
-                        <img src="imagens/capa-img3.png" alt="img3">
-                        <h3>ESTRATÉGIAS DE E-COMMERCE</h3>
-                        <p>
-                            Âncoras que transformam cliques em carrinhos cheioss, navegadores em compradores e sonhos em realidade digital.
-                        </p>
-                    </div>
-                    <div class="mdi">
-                        <img src="imagens/capa-img4.png" alt="img4">
-                        <h3>MARKETING DE INFLUENCIADORES</h3>
-                        <p>
-                            Arte de transformar vozes autêntiacas em ecoadores poderosos, construindo conexões genuínas e impulsionando marcas para alturas extraordinárias.
-                        </p>
-                    </div>
-                    <div class="tec">
-                        <img src="imagens/capa-img5.png" alt="img5">
-                        <h3>TREINAMENTO E CAPTAÇÃO</h3>
-                        <p>
-                            Ferramentas que esculpem equipes extraordinárias, aprimorando o conhecimento em competência e talento em sucesso.
-                        </p>
-                    </div>
-                    <div class="dam">
-                        <img src="imagens/capa-img6.png" alt="img6">
-                        <h3>DESENVOLVIMENTO DE APLICATIVOS MÓVEIS</h3>
-                        <p>
-                            Inovação que cabe na palma da sua mão, tornando ideais em experiências, desafios em soluções e smartphones em portas para o futuro.
-                        </p>
+                <article class="galeria">
+                    <i id="anterior" class="material-symbols-outlined">
+                        arrow_back_ios
+                    </i>
+                    <i id="proximo" class="material-symbols-outlined">
+                         arrow_forward_ios
+                    </i> 
+                    <div class="fotos" >
+                        <div id="gro" class="ativa">
+                            <img src="imagens/capa-img1.png" alt="img1">
+                            <h3>GESTÃO DE REPUTAÇÃO ON-LINE</h3>
+                            <p>
+                                Escudo invisível que protege a integridade de uma marca, moldando percepções e forçando o caminho para o sucesso duradouro.
+                            </p>
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="dgc">
+                            <img src="imagens/capa-img2.png" alt="img2" >
+                            <h3>DESIGN GRÁFICO E CRIATIVO</h3>
+                            <p>
+                                Arte que pinta a narrativa visual do futuro, transformando idéias em imagens que ecoam na mente e no coração.
+                            </p>
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="eec">
+                            <img src="imagens/capa-img3.png" alt="img3">
+                            <h3>ESTRATÉGIAS DE E-COMMERCE</h3>
+                            <p>
+                                Âncoras que transformam cliques em carrinhos cheioss, navegadores em compradores e sonhos em realidade digital.
+                            </p>
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="mdi">
+                            <img src="imagens/capa-img4.png" alt="img4">
+                            <h3>MARKETING DE INFLUENCIADORES</h3>
+                            <p>
+                                Arte de transformar vozes autêntiacas em ecoadores poderosos, construindo conexões genuínas e impulsionando marcas para alturas extraordinárias.
+                            </p>
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="tec">
+                            <img src="imagens/capa-img5.png" alt="img5">
+                            <h3>TREINAMENTO E CAPTAÇÃO</h3>
+                            <p>
+                                Ferramentas que esculpem equipes extraordinárias, aprimorando o conhecimento em competência e talento em sucesso.
+                            </p>
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="dam">
+                            <img src="imagens/capa-img6.png" alt="img6">
+                            <h3>DESENVOLVIMENTO DE APLICATIVOS MÓVEIS</h3>
+                            <p>
+                                Inovação que cabe na palma da sua mão, tornando ideais em experiências, desafios em soluções e smartphones em portas para o futuro.
+                            </p>
+                            <button>SABER MAIS</button>
+                        </div>
                     </div>
                 </article>
         </section>
@@ -95,7 +103,8 @@
             Site desenvolvido por Emeyas Franco da <a href="#">N7 Marketing</a>
         </p>
     </footer>
-    <script>
+    <script src="script.js">
+        
         function mudouTamanho(){
             if (window.innerWidth >= 768) {
                 itens.style.display = 'block'
