--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             Site desenvolvido por Emeyas Franco da <a href="#">N7 Marketing</a>
         </p>
     </footer>
-    <script src="script.js">
+    <script src="script.j">
         
         function mudouTamanho(){
             if (window.innerWidth >= 768) {
