atualizações do Menu e serviços

--- a/index.html
+++ b/index.html
@@ -46,52 +46,52 @@
                          arrow_forward_ios
                     </i> 
                     <div class="fotos" >
-                        <div id="gro" class="ativa">
-                            <img src="imagens/capa-img1.png" alt="img1">
-                            <h3>GESTÃO DE REPUTAÇÃO ON-LINE</h3>
-                            <p>
-                                Escudo invisível que protege a integridade de uma marca, moldando percepções e forçando o caminho para o sucesso duradouro.
-                            </p>
+                        <div id="serv1" class="ativa">
+                            <img src="imagens/serviços/analiseemonitoramento.jpg" alt="Analytics e Monitoramento">
                             <button>SABER MAIS</button>
                         </div>
-                        <div id="dgc">
-                            <img src="imagens/capa-img2.png" alt="img2" >
-                            <h3>DESIGN GRÁFICO E CRIATIVO</h3>
-                            <p>
-                                Arte que pinta a narrativa visual do futuro, transformando idéias em imagens que ecoam na mente e no coração.
-                            </p>
+                        <div id="serv2">
+                            <img src="imagens/serviços/automacaodemarketing.jpg" alt="Automação de Marketing" >
                             <button>SABER MAIS</button>
                         </div>
-                        <div id="eec">
-                            <img src="imagens/capa-img3.png" alt="img3">
-                            <h3>ESTRATÉGIAS DE E-COMMERCE</h3>
-                            <p>
-                                Âncoras que transformam cliques em carrinhos cheioss, navegadores em compradores e sonhos em realidade digital.
-                            </p>
+                        <div id="serv3">
+                            <img src="imagens/serviços/desenvolvimentoapp.jpg" alt="Desenvolvimento de Aplicativos Móveis">
                             <button>SABER MAIS</button>
                         </div>
-                        <div id="mdi">
-                            <img src="imagens/capa-img4.png" alt="img4">
-                            <h3>MARKETING DE INFLUENCIADORES</h3>
-                            <p>
-                                Arte de transformar vozes autêntiacas em ecoadores poderosos, construindo conexões genuínas e impulsionando marcas para alturas extraordinárias.
-                            </p>
+                        <div id="serv4">
+                            <img src="imagens/serviços/desenvolvimentoweb.jpg" alt="Desenvolvimento Web">
                             <button>SABER MAIS</button>
                         </div>
-                        <div id="tec">
-                            <img src="imagens/capa-img5.png" alt="img5">
-                            <h3>TREINAMENTO E CAPTAÇÃO</h3>
-                            <p>
-                                Ferramentas que esculpem equipes extraordinárias, aprimorando o conhecimento em competência e talento em sucesso.
-                            </p>
+                        <div id="serv5">
+                            <img src="imagens/serviços/designgraficoecriativo.jpg" alt="Design Gráfico e Criativo">
                             <button>SABER MAIS</button>
                         </div>
-                        <div id="dam">
-                            <img src="imagens/capa-img6.png" alt="img6">
-                            <h3>DESENVOLVIMENTO DE APLICATIVOS MÓVEIS</h3>
-                            <p>
-                                Inovação que cabe na palma da sua mão, tornando ideais em experiências, desafios em soluções e smartphones em portas para o futuro.
-                            </p>
+                        <div id="serv6">
+                            <img src="imagens/serviços/emailmarketing.jpg" alt="E-mail Marketing">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv7">
+                            <img src="imagens/serviços/estrategiasdeecomerce.jpg" alt="Estratégias de E-commercer">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv8">
+                            <img src="imagens/serviços/gestaodereputacaoonline.jpg" alt="Gestão de Reputação On Line">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv9">
+                            <img src="imagens/serviços/marketingdeconteudo.jpg" alt="Marketing de Conteúdo">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv10">
+                            <img src="imagens/serviços/marketingdeinfluenciadores.jpg" alt="Marketing de Influenciadores">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv11">
+                            <img src="imagens/serviços/publicidadeonline.jpg" alt="Publicidade On line">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv12">
+                            <img src="imagens/serviços/seootimizacaodebusca.jpg" alt="SEO - Otimização de Busca">
                             <button>SABER MAIS</button>
                         </div>
                     </div>
@@ -103,21 +103,8 @@
             Site desenvolvido por Emeyas Franco da <a href="#">N7 Marketing</a>
         </p>
     </footer>
-    <script src="script.j">
-        
-        function mudouTamanho(){
-            if (window.innerWidth >= 768) {
-                itens.style.display = 'block'
-            }
-            else (itens.style.display = 'none')
-        }
-        
-        function clickMenu(){
-            if (itens.style.display == 'block') {
-                itens.style.display = 'none'
-            }
-            else (itens.style.display = 'block')
-        }
+    <script src="script.js">
+
     </script>
 </body>
 </html>
