--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     SERVIÇOS
                 </h2>
                 <article class="galeria">
-                    <i id="anterior" class="material-symbols-outlined">
+                    <i id="anterior" class="material-symbols-outlined" onclick="anterior()">
                         arrow_back_ios
                     </i>
                     <i id="proximo" class="material-symbols-outlined">
@@ -94,6 +94,11 @@
                             <img src="imagens/serviços/seootimizacaodebusca.jpg" alt="SEO - Otimização de Busca">
                             <button>SABER MAIS</button>
                         </div>
+                    </div>
+                </article>
+                <article class="missao">
+                    <div>
+                        <img src="imagens/Missão e Valores/missao.jpg" alt="">
                     </div>
                 </article>
         </section>
