--- a/index2.html
+++ b/index2.html
@@ -4,53 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N7 - Marketing</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="estilo/style.css">
+    <style>
+        *{margin: 0; padding: 0;}
+        .slider{
+            display: block;
+            height: 293px;
+            width: 400px;
+            margin: auto;
+            margin-top: 20px;
+            position: relative;
+        }
+        .slider li{
+            list-style: none;
+            position: absolute;
+        }
+        .slider img {
+            margin: auto;
+            height: 100%;
+            width: 100%;
+            vertical-align: top;
+            opacity: 0;
+            visibility: hidden;
+        }
+        .slider input {
+            display: none;
+        }       
+        .slider label{
+            background-color: #000;
+            bottom: 10px;
+            cursor: pointer;
+            display: block;
+            height: 10px;
+            position: absolute;
+            width: 10px;
+            z-index: 10;
+        }
+        .slider li:nth-child(1) label {
+            left: 10px;
+        }
+        .slider li:nth-child(2) label {
+            left: 40px;
+        }
+        .slider li:nth-child(3) label {
+            left: 70px;
+        }
+        .slider li:nth-child(4) label {
+            left: 110px;
+        }
+        .slider li input:checked ~img {
+            opacity: 1;
+            visibility: visible;
+            z-index: 10;
+        }
+    </style>
 </head>
 <body onresize="mudouTamanho()">
-    <header id="cabecalho">
-        <div class="top">
-            <p>
-                <a href="#">ATENDIMENTO NO WHATSAPP</a>
-            </p>
-        </div>
-        <div id="logo">
-            <h1>
-                    N7 MARKETING
-            </h1>
-            <h2>
-                    ASSESSORIA E CONSULTORIA
-            </h2>
-        </div>
-        <nav id="menu">
-            <i id="burguer" class="material+symbols+outlinet">menu</i>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Sobre a N7</a></li>
-                    <li><a href="#" class="contato">Contato</a></li>
-                </ul>
-        </nav>        
-    </header>
     <main>
         <section>
-            <div>
-                <h1> N7 MARKETING <br> ACESSORIA E CONSULTORIA</h1>
-            </div>
-            <div>
-                <img src="imagens/img.jpg" alt="Engrenagens" width="300" height="250">
-            </div>
-            <div>
-                <nav>
-                    <p>teste</p>
-                </nav>
-            </div>
-            <br>
-            <div>
-            
-            </div>
-            <div>
-            </div>
+            <ul class="slider">
+                <li>
+                    <input type="radio" name="slide" id="slide1" checked>
+                    <label for="slide1"></label>
+                    <img src="imagens/serviços/analiseemonitoramento.jpg">
+                </li>
+                <li>
+                    <input type="radio" name="slide" id="slide2">
+                    <label for="slide2"></label>
+                    <img src="imagens/serviços/desenvolvimentoweb.jpg">
+                </li>
+                <li>
+                    <input type="radio" name="slide" id="slide3">
+                    <label for="slide3"></label>
+                    <img src="imagens/serviços/desenvolvimentoapp.jpg">
+                </li>
+                <li>
+                    <input type="radio" name="slide" id="slide4">
+                    <label for="slide4"></label>
+                    <img src="imagens/serviços/automacaodemarketing.jpg">
+                </li>
+            </ul>
         </section>
     </main>
 
