--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="top">
             <p><a href="https://wa.me/5562982855454?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank">ATENDIMENTO NO WHATSAPP</a></p>
         </div id="logo">
-        <img src="imagens/logo.png" alt="Logo N7" width="190" >
+        <img src="imagens/logo.png" alt="Logo N7" width="180" >
         <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
         <menu id="itens">
             <ul>
@@ -108,8 +108,6 @@
             Site desenvolvido por Emeyas Franco da <a href="#">N7 Marketing</a>
         </p>
     </footer>
-    <script src="script.js">
-
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
