--- a/index.html
+++ b/index.html
@@ -101,6 +101,67 @@
                         <img src="imagens/Missão e Valores/missao.jpg" alt="">
                     </div>
                 </article>
+            <h2>
+                    SERVIÇOS
+                </h2>
+                <article class="galeria">
+                    <i id="anterior" class="material-symbols-outlined" onclick="anterior()">
+                        arrow_back_ios
+                    </i>
+                    <i id="proximo" class="material-symbols-outlined">
+                         arrow_forward_ios
+                    </i> 
+                    <div class="fotos" >
+                        <div id="serv1" class="ativa">
+                            <img src="imagens/serviços/analiseemonitoramento.jpg" alt="Analytics e Monitoramento">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv2">
+                            <img src="imagens/serviços/automacaodemarketing.jpg" alt="Automação de Marketing" >
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv3">
+                            <img src="imagens/serviços/desenvolvimentoapp.jpg" alt="Desenvolvimento de Aplicativos Móveis">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv4">
+                            <img src="imagens/serviços/desenvolvimentoweb.jpg" alt="Desenvolvimento Web">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv5">
+                            <img src="imagens/serviços/designgraficoecriativo.jpg" alt="Design Gráfico e Criativo">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv6">
+                            <img src="imagens/serviços/emailmarketing.jpg" alt="E-mail Marketing">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv7">
+                            <img src="imagens/serviços/estrategiasdeecomerce.jpg" alt="Estratégias de E-commercer">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv8">
+                            <img src="imagens/serviços/gestaodereputacaoonline.jpg" alt="Gestão de Reputação On Line">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv9">
+                            <img src="imagens/serviços/marketingdeconteudo.jpg" alt="Marketing de Conteúdo">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv10">
+                            <img src="imagens/serviços/marketingdeinfluenciadores.jpg" alt="Marketing de Influenciadores">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv11">
+                            <img src="imagens/serviços/publicidadeonline.jpg" alt="Publicidade On line">
+                            <button>SABER MAIS</button>
+                        </div>
+                        <div id="serv12">
+                            <img src="imagens/serviços/seootimizacaodebusca.jpg" alt="SEO - Otimização de Busca">
+                            <button>SABER MAIS</button>
+                        </div>
+                    </div>
+                </article>
         </section>
     </main>
     <footer>
