--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </header>
     <main>
         <section id="n7">
+            <h2>
+                MISSÃO
+            </h2>
             <div>
                 <h1>N7 Marketing <br> Assessoria e Consultoria</h1>
                 <p>Capacitamos empresas e profissionais a prosperarem no mundo digital.</p>
@@ -36,7 +39,7 @@
         </section>
         <section id="servicos" class="servicos">
                 <h2>
-                    SERVIÇOS
+                    VALORES
                 </h2>
                 <article class="galeria">
                     <i id="anterior" class="material-symbols-outlined" onclick="anterior()">
