--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="imagens/logo-whatsapp.png" alt="logo Whatsapp" id="fale">
     <header>
         <div id="top">
-            <p><a href="https://wa.me/5562982855454?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank">ATENDIMENTO NO WHATSAPP &nbsp; <i style="font-size:24px" class="fa">&#xf232;</i></a></p>
+            <p><a href="https://wa.me/5562982855454?text=Gostaria+de+informa%C3%A7%C3%B5e+sobre+servi%C3%A7os%2C+valores." target="_blank">ATENDIMENTO NO WHATSAPP</a></p>
         </div id="logo">
         <img src="imagens/logo.png" alt="Logo N7" width="180" >
         <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
@@ -36,14 +36,14 @@
         </section>
         <section id="servicos" class="servicos">
                 <h2>
-                    SERVIÇOS
+                    MISSÃO
                 </h2>
                 <article class="galeria">
                     <i id="anterior" class="material-symbols-outlined" onclick="anterior()">
                         arrow_back_ios
                     </i>
                     <i id="proximo" class="material-symbols-outlined">
-                        arrow_forward_ios
+                         arrow_forward_ios
                     </i> 
                     <div class="fotos" >
                         <div id="serv1" class="ativa">
@@ -109,7 +109,7 @@
                         arrow_back_ios
                     </i>
                     <i id="proximo" class="material-symbols-outlined">
-                        arrow_forward_ios
+                         arrow_forward_ios
                     </i> 
                     <div class="fotos" >
                         <div id="serv1" class="ativa">
